complete the email API part

--- a/project/html/charity html/about_us.html
+++ b/project/html/charity html/about_us.html
@@ -1,4 +1,11 @@
-<!-- @format -->
+<!-------------------------------------------------
+ * @file      about_us.html
+ * @author    @ZouariOmar (zouariomar20@gmail.com)
+ * @IDE       VSC
+ * @version   0.1
+ * @date      2024-06-06
+ * @copyright Copyright (c) 2024
+------------------------------------------------->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -31,14 +38,17 @@
 				<li style="float: right">
 					<img
 						src="/project/res/AMUT imgs/logo.png"
+						title="AMUT"
 						alt="logo.png"
 						class="logo" />
 				</li>
 				<li>
-					<a href="/project/html/index.html">الصفحة الرئيسية</a>
+					<a href="/project/html/index.html"
+						><i class="fa fa-home"></i>الصفحة الرئيسية</a
+					>
 				</li>
 				<li>
-					<a href="#" class="active">الجمعية</a>
+					<a href="#" class="active"><i class="fa fa-caret-down"></i>الجمعية</a>
 					<ul class="submenu">
 						<li>
 							<a href="/project/html/charity html/about_us.html">من نحن ؟</a>
@@ -59,7 +69,7 @@
 					</ul>
 				</li>
 				<li>
-					<a href="#">الأنشطة</a>
+					<a href="#"><i class="fa fa-caret-down"></i>الأنشطة</a>
 					<ul class="submenu">
 						<li>
 							<a href="/project/html/activities html/act-2024.html">2024</a>
@@ -75,7 +85,11 @@
 						</li>
 					</ul>
 				</li>
-				<li><a href="/project/html/contact.html">الإتصال</a></li>
+				<li>
+					<a href="/project/html/contact.html"
+						><i class="fa fa-phone"></i>الإتصال</a
+					>
+				</li>
 			</ul>
 		</nav>
 		<!--* Navbar: end -->
