--- a/project/html/activities html/act-2024.html
+++ b/project/html/activities html/act-2024.html
@@ -1,4 +1,11 @@
-<!-- @format -->
+<!-------------------------------------------------
+ * @file      act-2024.html
+ * @author    @ZouariOmar (zouariomar20@gmail.com)
+ * @IDE       VSC
+ * @version   0.1
+ * @date      2024-06-06
+ * @copyright Copyright (c) 2024
+------------------------------------------------->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,32 +14,62 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- Set the website page logo -->
-		<link rel="website icon" type="png" href="../res/AMUT imgs/logo.png" />
+		<link
+			rel="website icon"
+			type="png"
+			href="/project/res/AMUT imgs/logo.png" />
 
 		<!--* linkers -->
-		<link rel="stylesheet" type="text/css" href="../css/default.css" />
-		<link rel="stylesheet" type="text/css" href="../css/navbar.css" />
+		<link rel="stylesheet" type="text/css" href="/project/css/default.css" />
+		<link rel="stylesheet" type="text/css" href="/project/css/navbar.css" />
 		<link rel="stylesheet" href="/project/css/artical.css" />
 		<link rel="stylesheet" type="text/css" href="/project/css/footer.css" />
+
+		<!--* Scripts -->
+		<script src="https://use.fontawesome.com/20ab91acc4.js"></script>
+
 		<title>AMUT | Activities</title>
 	</head>
 
 	<body>
-		<!--* Navigation Bar -->
+		<!--* Navbar: start -->
 		<nav>
 			<ul>
 				<li style="float: right">
 					<img
 						src="/project/res/AMUT imgs/logo.png"
+						title="AMUT"
 						alt="logo.png"
 						class="logo" />
 				</li>
 				<li>
-					<a href="/project/html/index.html">الصفحة الرئيسية</a>
+					<a href="/project/html/index.html"
+						><i class="fa fa-home"></i>الصفحة الرئيسية</a
+					>
 				</li>
-				<li><a href="/project/html/about.html">الجمعية</a></li>
 				<li>
-					<a href="#" class="active">الأنشطة</a>
+					<a href="#"><i class="fa fa-caret-down"></i>الجمعية</a>
+					<ul class="submenu">
+						<li>
+							<a href="/project/html/charity html/about_us.html">من نحن ؟</a>
+						</li>
+						<li>
+							<a href="/project/html/charity html/objectives.html">أهدافنا</a>
+						</li>
+						<li>
+							<a href="/project/html/charity html/members.html"
+								>الهيئة الإدارية</a
+							>
+						</li>
+						<li>
+							<a href="/project/html/charity html/prim_law.html"
+								>النظام الأساسي</a
+							>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="#" class="active"><i class="fa fa-caret-down"></i>الأنشطة</a>
 					<ul class="submenu">
 						<li>
 							<a href="/project/html/activities html/act-2024.html">2024</a>
@@ -48,11 +85,16 @@
 						</li>
 					</ul>
 				</li>
-				<li><a href="/project/html/contact.html">الإتصال</a></li>
+				<li>
+					<a href="/project/html/contact.html"
+						><i class="fa fa-phone"></i>الإتصال</a
+					>
+				</li>
 			</ul>
 		</nav>
+		<!--* Navbar: end -->
 
-		<!--* Footter part -->
+		<!--* Footer part: start -->
 		<footer class="footer">
 			<div class="waves">
 				<div class="wave" id="wave1"></div>
@@ -60,51 +102,77 @@
 				<div class="wave" id="wave3"></div>
 				<div class="wave" id="wave4"></div>
 			</div>
+
+			<!-- Setup the right menu: start -->
 			<ul class="menu">
 				<li class="menu__item">
 					<a class="menu__link" href="index.html">الصفحة الرئيسية</a>
 				</li>
 				<li class="menu__item">
-					<a class="menu__link" href="about.html">الجمعية</a>
+					<a class="menu__link" href="#">الجمعية</a>
 				</li>
 				<li class="menu__item">
-					<a class="menu__link" href="activities.html">الأنشطة</a>
+					<a class="menu__link" href="#">الأنشطة</a>
 				</li>
 				<li class="menu__item">
 					<a class="menu__link" href="contact.html">الإتصال</a>
 				</li>
 			</ul>
+			<!-- Setup the right menu: end -->
+
+			<!-- Setup the copyright and AMUT logo: start -->
 			<div class="center-content">
 				<img
 					src="/project/res/AMUT imgs/logo.png"
 					alt="logo.png"
-					class="logo" />
+					class="logo"
+					title="AMUT" />
 				<p>&copy; 2024 AMUT | جميع الحقوق محفوظة</p>
 			</div>
+			<!-- Setup the copyright and AMUT logo: end -->
 
+			<!-- Facebook icon: start -->
 			<ul class="social-icon">
 				<li class="social-icon__item">
 					<a class="social-icon__link" href="https://www.facebook.com/AMUT2012">
-						<ion-icon name="logo-facebook"></ion-icon>
+						<i class="fa fa-facebook" title="صفحتنا على الفيسبوك"></i>
 					</a>
 				</li>
 			</ul>
+			<!-- Facebook icon: end -->
+
+			<!-- Whatsapp icon: start -->
 			<ul class="social-icon">
 				<li class="social-icon__item">
 					<a
 						class="social-icon__link"
 						href="https://api.whatsapp.com/send?phone=%2B21658127598&context=ARAyjYtCi0RbehIJrpwISctrwN5cZQfGQ8WKpWZnzFVDpg5BJcreG27LR7tlH9Z6OkTAKVsvzuvjO86EtGVAHQSTfrO19l0S1hEH-an0QCoWzlSA4V9Zl-zGEBhzAvwjJdB-gmumMntEynfsrc8DfAW8YQ&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwY2xjawEfiC1leHRuA2FlbQIxMAABHaaz7ezz1INlCt_zsETw4DnOALZkUdU_K1aDzV3McSW9KyMJ8stKObU0Fg_aem_GGeEEwIHMcFKKU6RItnrOQ">
-						<ion-icon name="logo-whatsapp"></ion-icon>
+						<i class="fa fa-whatsapp" title="اتصل بنا على الواتس اب"></i>
 					</a>
 				</li>
 			</ul>
-		</footer>
+			<!-- Whatsapp icon: end -->
 
-		<script
-			type="module"
-			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-		<script
-			nomodule
-			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+			<!-- Mail icon: start -->
+			<ul class="social-icon">
+				<li class="social-icon__item">
+					<a class="social-icon__link" href="mailto:contact@amut.org.tn">
+						<i class="fa fa-envelope-o" title="راسلنا بالبريد الإلكتروني"></i>
+					</a>
+				</li>
+			</ul>
+			<!-- Mail icon: end -->
+
+			<!-- Tel icon: start -->
+			<ul class="social-icon">
+				<li class="social-icon__item">
+					<a class="social-icon__link" href="tel:+21693490909">
+						<i class="fa fa-phone" title="اتصل بنا"></i>
+					</a>
+				</li>
+			</ul>
+			<!-- Tel icon: end -->
+		</footer>
+		<!--* Footer part: end -->
 	</body>
 </html>
