--- a/project/html/index.html
+++ b/project/html/index.html
@@ -1,5 +1,3 @@
-<!-- @format -->
-
 <!-------------------------------------------------
  * @file      index.html
  * @author    @ZouariOmar (zouariomar20@gmail.com)
@@ -16,8 +14,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+		<!--* Set the page icon -->
+		<link
+			rel="website icon"
+			type="png"
+			href="/project/res/AMUT imgs/logo.png" />
+
 		<!--* Linkers -->
-		<link rel="website icon" type="png" href="../res/AMUT imgs/logo.png" />
 		<link rel="stylesheet" type="text/css" href="../css/home.css" />
 		<link rel="stylesheet" type="text/css" href="../css/default.css" />
 		<link rel="stylesheet" type="text/css" href="../css/footer.css" />
@@ -37,14 +40,17 @@
 				<li style="float: right">
 					<img
 						src="/project/res/AMUT imgs/logo.png"
+						title="AMUT"
 						alt="logo.png"
 						class="logo" />
 				</li>
 				<li>
-					<a href="/project/html/index.html" class="active">الصفحة الرئيسية</a>
+					<a href="/project/html/index.html" class="active"
+						><i class="fa fa-home"></i>الصفحة الرئيسية</a
+					>
 				</li>
 				<li>
-					<a href="#">الجمعية</a>
+					<a href="#"><i class="fa fa-caret-down"></i>الجمعية</a>
 					<ul class="submenu">
 						<li>
 							<a href="/project/html/charity html/about_us.html">من نحن ؟</a>
@@ -65,7 +71,7 @@
 					</ul>
 				</li>
 				<li>
-					<a href="#">الأنشطة</a>
+					<a href="#"><i class="fa fa-caret-down"></i>الأنشطة</a>
 					<ul class="submenu">
 						<li>
 							<a href="/project/html/activities html/act-2024.html">2024</a>
@@ -81,7 +87,11 @@
 						</li>
 					</ul>
 				</li>
-				<li><a href="/project/html/contact.html">الإتصال</a></li>
+				<li>
+					<a href="/project/html/contact.html"
+						><i class="fa fa-phone"></i>الإتصال</a
+					>
+				</li>
 			</ul>
 		</nav>
 		<!--* Navbar: end -->
@@ -99,10 +109,18 @@
 		</video>
 
 		<hr />
-		
+
 		<section class="lastNews">
-		<h1>آخر الأخبار</h1>
+			<h1>آخر الأخبار</h1>
 		</section>
+
+		<hr />
+
+		<section class="lastNews">
+			<h1>آخر الأنشطة</h1>
+		</section>
+
+
 
 		<!--* Footer part: start -->
 		<footer class="footer">
