complete the act-2021

--- a/project/html/activities html/act-2021.html
+++ b/project/html/activities html/act-2021.html
@@ -1,3 +1,5 @@
+<!-- @format -->
+
 <!-------------------------------------------------
  * @file      act-2021.html
  * @author    @ZouariOmar (zouariomar20@gmail.com)
@@ -22,7 +24,7 @@
 		<!--* linkers -->
 		<link rel="stylesheet" type="text/css" href="/project/css/default.css" />
 		<link rel="stylesheet" type="text/css" href="/project/css/navbar.css" />
-		<link rel="stylesheet" href="/project/css/artical.css" />
+		<link rel="stylesheet" type="text/css" href="/project/css/artical.css" />
 		<link rel="stylesheet" type="text/css" href="/project/css/footer.css" />
 
 		<!--* Scripts -->
@@ -173,17 +175,67 @@
 		<hr />
 
 		<!--* Content section -->
-		<article class="information">
-			<div id="N00">
-				<h2>ندوات حول كوفيد</h2>
+		<!-- N00 Article: start -->
+		<article class="sub_article" id="N00">
+			<h1>ندوات حول كوفيد</h1>
+			<div>
 				<p>
-					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis,
-					repudiandae. Qui iusto, dolore ipsum aliquam ipsa perferendis nobis
-					adipisci laboriosam, amet, minus expedita. Sed impedit eligendi, ipsam
-					unde nam aliquam.
+					نظرا للوضع الصحي و موضوع الساعة الفيروس التاجي المستجد، ارتأت الجمعية
+					أن تنظم سلسلة من الندوات عبر الأنترنيت حول هذا الموضوع:
 				</p>
+				<p class="li_prg">
+					الندوة الأولى كانت يوم 11 ديسمبر 2020 بعنوان "Actualités dans la prise
+					en charge des patients COVID-19 " <br />
+					قدّمها عميد كلية الطبّ سابقا عبر تطبيقة Zoom.
+				</p>
+				<p class="li_prg">
+					الندوة الثانية كانت يوم 5 مارس 2021 بعنوان "ambulatoire des patients
+					COVID-19  Prise en charge" <br />أكثر من 80 طبيبا كانوا حاضرين عبر
+					التطبيقة Microsoft teams لمتابعة الندوة نظرا لأهمية الموضوع.
+				</p>
+				<p class="li_prg">
+					الندوة الثالثة كانت يوم 16 مارس 2021 بعنوان "مرض السكري و كوفيد-19" .
+					<br />شارك في الندوة أكثر من 50 طبيبا عبر التطبيقة Microsoft teams
+				</p>
+				<hr />
+
+				<figure>
+					<img
+						src="/project/res/activiries imgs/2021 imgs/image.png"
+						alt="image.png"
+						title="" />
+					<img
+						src="/project/res/activiries imgs/2021 imgs/image copy.png"
+						alt="image.png"
+						title="" />
+					<img
+						src="/project/res/activiries imgs/2021 imgs/image copy 2.png"
+						alt="image.png"
+						title="" />
+				</figure>
 			</div>
 		</article>
+		<!-- N00 Article: end -->
+
+		<!-- N01 Article: start -->
+		<article class="sub_article" id="N00">
+			<h1>test</h1>
+			<div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+					quisquam nihil molestias aliquid id cupiditate non vel autem mollitia
+					dolore atque reprehenderit alias, harum maiores dicta praesentium
+					laborum ducimus. Ipsa.
+				</p>
+				<figure>
+					<img src="/project/res/members imgs/Med_zouari.jpg" alt="" />
+					<img src="/project/res/members imgs/Med_zouari.jpg" alt="" />
+					<img src="/project/res/members imgs/Med_zouari.jpg" alt="" />
+					<img src="/project/res/members imgs/Med_zouari.jpg" alt="" />
+				</figure>
+			</div>
+		</article>
+		<!-- N01 Article: end -->
 
 		<!--* Footer part: start -->
 		<footer class="footer">
