--- a/project/html/activities html/act-2021.html
+++ b/project/html/activities html/act-2021.html
@@ -243,7 +243,7 @@
 
 		<!-- N02 Article: start -->
 		<article class="sub_article02" id="N02">
-			<h1>COVID19 : tour d’horizon et nouveautés</h1>
+			<h1>Explorations Radiologiques</h1>
 			<div>
 				<p>
 					و بنفس الطريقة نظمت الجمعية دورة تكوينية عن بعد بعنوان « Explorations
@@ -255,6 +255,7 @@
 				<p class="li_prg">"Explorations Radiologiques de l’abdomen"</p>
 				<p class="li_prg">"Les explorations neuroradiologiques"</p>
 				<p class="li_prg">"Radiologique de l’appareil locomoteur"</p>
+				<hr />
 				<figure>
 					<img
 						src="/project/res/activiries imgs/2021 imgs/image copy 4.png"
