--- a/project/html/activities html/act-2022.html
+++ b/project/html/activities html/act-2022.html
@@ -1,3 +1,5 @@
+<!-- @format -->
+
 <!-------------------------------------------------
  * @file      act-2022.html
  * @author    @ZouariOmar (zouariomar20@gmail.com)
@@ -14,7 +16,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- Set the website page logo -->
-		<link rel="website icon" type="png" href="/project/res/AMUT imgs/logo.png" />
+		<link
+			rel="website icon"
+			type="png"
+			href="/project/res/AMUT imgs/logo.png" />
 
 		<!--* linkers -->
 		<link rel="stylesheet" type="text/css" href="/project/css/default.css" />
@@ -94,7 +99,7 @@
 		<!-- Partial: start -->
 		<div class="container">
 			<!--* Topic N00 -->
-			<a href="http://" class="card">
+			<a href="#N00" class="card">
 				<div class="card__header">
 					<img
 						src="https://www.aude.fr/sites/default/files/styles/768x430/public/media/images/4.%20Vivre%20dans%20l%27aude/4.4%20Nature/4.4.1%20Randonner/4.4.1%20MAjeure.jpg?itok=hWlfgYU1"
@@ -118,17 +123,41 @@
 			</a>
 
 			<!--* Topic N01 -->
-			<a href="http://" class="card">
+			<a href="#N01" class="card">
 				<div class="card__header">
 					<img
-						src="https://media.brate.com/images/afryka/tunezja/sfax/sfax-1.jpeg"
-						alt="مهرجان الحاجوجة"
+						src="https://images-cdn.welcomesoftware.com/Zz04N2JlMGNlODQ5OGMxMWVkYmY4YTgyM2M2MWI4YWE2Mw==/doctor-analyzes-an-ecg-1.jpg"
+						alt="ECG.png"
 						class="card__image"
 						width="600" />
 				</div>
 				<div class="card__body">
-					<span class="tag tag-blue">الحاجوجة</span>
-					<h3>مهرجان الحاجوجة</h3>
+					<span class="tag tag-blue">دورة تكوينية</span>
+					<h3>Cycle De Formation ECG</h3>
+					<p>
+						نظمت الجمعية دورة تكوينية باشراف الفريق الطبي لامراض القلب بمستشفى
+						...
+					</p>
+				</div>
+				<div class="card__footer">
+					<div class="user__info">
+						<small>21 جانفي 2022 - 18فيفري 2022</small>
+					</div>
+				</div>
+			</a>
+
+			<!--* Topic N02 -->
+			<a href="#N02" class="card">
+				<div class="card__header">
+					<img
+						src="https://media.brate.com/images/afryka/tunezja/sfax/sfax-1.jpeg"
+						alt="image.png"
+						class="card__image"
+						width="600" />
+				</div>
+				<div class="card__body">
+					<span class="tag tag-blue">تظاهرة تثقيفية</span>
+					<h3>نصوم ولا ما نصومش</h3>
 					<p>
 						بالتعاون مع جمعية "مهرجان الحاجوجة " و بلدية صفاقس نظمت الجمعية
 						تظاهرة تثقيفية ...
@@ -141,8 +170,8 @@
 				</div>
 			</a>
 
-			<!--* Topic N05 -->
-			<a href="http://" class="card">
+			<!--* Topic N03 -->
+			<a href="#N03" class="card">
 				<div class="card__header">
 					<img
 						src="https://externat-medecine.fr/media/items/relation-medecin-patient.webp"
@@ -152,7 +181,7 @@
 				</div>
 				<div class="card__body">
 					<span class="tag tag-blue">دورة تكوينية</span>
-					<h3>العلاقة بين الطبيب والمريض</h3>
+					<h3>Relation Medecin Malade</h3>
 					<p>
 						نظمت الجمعية دورة تكوينية قدّمتها رئيس قسم علم النفس B الدكتورة
 						جيهان علولو و رئيس قسم علم النفس ...
@@ -167,20 +196,121 @@
 		</div>
 		<!-- Partial0: end -->
 
+		<!-- Separator image: start -->
+		<img src="/project/res/custom/image.png" alt="custom.png" />
+		<!-- Separator image: end -->
+
 		<hr />
 
-		<!--* Content section -->
-		<article class="information">
-			<div id="N00">
-				<h2>ندوات حول كوفيد</h2>
+		<!--* Content section: start -->
+		<!-- N00 Article: start -->
+		<article class="sub_article01" id="N00">
+			<h1>رحلة ترفيهية</h1>
+			<div>
 				<p>
-					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis,
-					repudiandae. Qui iusto, dolore ipsum aliquam ipsa perferendis nobis
-					adipisci laboriosam, amet, minus expedita. Sed impedit eligendi, ipsam
-					unde nam aliquam.
+					نظمت الجمعية بالتعاون مع sfax randonnée رحلة ترفيهية الى واد الزيتون
+					بنزرت يوم 1 جانفي 2022.
 				</p>
+				<hr />
+				<figure>
+					<img
+						src="/project/res/activiries imgs/2022 imgs/image.png"
+						alt="image.png"
+						title="واد الزيتون بنزرت" />
+				</figure>
 			</div>
 		</article>
+		<!-- N00 Article: end -->
+
+		<!-- N01 Article: start -->
+		<article class="sub_article00" id="N01">
+			<h1>Cycle de formation ECG</h1>
+			<div>
+				<p>
+					نظمت الجمعية دورة تكوينية باشراف الفريق الطبي لامراض القلب بمستشفى
+					الهادي شاكر صفاقس بعنوان : “Cycle de formation ECG” <br />
+					تضمنت الدورة اربع ورشات وشاركـ فيها أكثر من 30 طبيبا.
+				</p>
+				<hr />
+				<figure>
+					<img
+						src="/project/res/activiries imgs/2022 imgs/image copy.png"
+						alt="image.png"
+						title="Cycle de formation ECG" />
+					<img
+						src="/project/res/activiries imgs/2022 imgs/image copy 2.png"
+						alt="image.png"
+						title="Cycle de formation ECG" />
+					<img
+						src="/project/res/activiries imgs/2022 imgs/image copy 3.png"
+						alt="image.png"
+						title="Cycle de formation ECG" />
+				</figure>
+			</div>
+		</article>
+		<!-- N01 Article: end -->
+
+		<!-- N02 Article: start -->
+		<article class="sub_article04" id="N02">
+			<h1>نصوم ولا ما نصومش</h1>
+			<div>
+				<p>
+					بالتعاون مع جمعية "مهرجان الحاجوجة " و بلدية صفاقس نظمت الجمعية تظاهرة
+					تثقيفية صحية بمناسبة شهر رمضان تحت شعار "نصوم ولا ما نصومش"
+				</p>
+				<p class="li_prg">
+					يوم 19 مارس: تم تقديم سلسلة من المحاضرات في الموضوع من طرف ذوي
+					الاختصاص بنزل Concorde بصفاقس.
+				</p>
+				<p class="li_prg">
+					:يوم 26 مارس: تم نصب خيمة صحية تثقيفية بساحة الشيحية صفاقس بالتعاون مع
+					مخابر Bionime.
+				</p>
+				<hr />
+				<figure>
+					<img
+						src="/project/res/activiries imgs/2022 imgs/image copy 4.png"
+						alt="image.png"
+						title="نصوم ولا ما نصومش" />
+					<img
+						src="/project/res/activiries imgs/2022 imgs/image copy 5.png"
+						alt="image.png"
+						title="نصوم ولا ما نصومش" />
+					<img
+						src="/project/res/activiries imgs/2022 imgs/image copy 6.png"
+						alt="image.png"
+						title="نصوم ولا ما نصومش" />
+				</figure>
+			</div>
+		</article>
+		<!-- N02 Article: end -->
+
+		<!-- N03 Article: start -->
+		<article class="sub_article04" id="N03">
+			<h1>Relation Medecin Malade</h1>
+			<div>
+				<p>
+					نظمت الجمعية دورة تكوينية قدّمتها رئيس قسم علم النفس B الدكتورة جيهان
+					علولو و رئيس قسم علم النفس C الدكتورة جيهان بن ثابت بمستشفى الهادي
+					شاكر تحت عنوان : « Relation Medecin Malade» لفائدة مجموعة من الأطباء
+					وتضمنت الدورة ورشات تكوين نظري وتطبيقي وشاركـ فيها أكثر من 30 طبيبا
+					بنزل برج الضيافة صفاقس.
+				</p>
+
+				<hr />
+				<figure>
+					<img
+						src="/project/res/activiries imgs/2022 imgs/image copy 7.png"
+						alt="image.png"
+						title="Relation Medecin Malade" />
+					<img
+						src="/project/res/activiries imgs/2022 imgs/image copy 8.png"
+						alt="image.png"
+						title="Relation Medecin Malade" />
+				</figure>
+			</div>
+		</article>
+		<!-- N03 Article: end -->
 
 		<!--* Footer part: start -->
 		<footer class="footer">
