--- a/project/html/charity html/prim_law.html
+++ b/project/html/charity html/prim_law.html
@@ -1,3 +1,5 @@
+<!-- @format -->
+
 <!-------------------------------------------------
  * @file      prim_law.html
  * @author    @ZouariOmar (zouariomar20@gmail.com)
@@ -94,8 +96,12 @@
 		</nav>
 		<!--* Navbar: end -->
 
-
-    
+		<a href="http://www.exemple.com">
+			<i
+				class="fa fa-file-pdf-o"
+				aria-hidden="true"
+				style="font-size: 50px"></i>
+		</a>
 
 		<!--* Footer part: start -->
 		<footer class="footer">
