add ADS and make the navbar sticky

--- a/project/html/activities html/act-2023.html
+++ b/project/html/activities html/act-2023.html
@@ -276,12 +276,48 @@
 				</figure>
 				<hr />
 				<a
-					href="https://www.facebook.com/AMUT2012/posts/557295193281487?ref=embed_post" target="_blank"
+					href="https://www.facebook.com/AMUT2012/posts/557295193281487?ref=embed_post"
+					target="_blank"
 					><i class="fa fa-facebook"></i
 				></a>
 			</div>
 		</article>
 		<!-- N02 Article: end -->
+
+		<!-- N03 Article: start -->
+		<article class="sub_article08" id="N03">
+			<h1>يا دكتور شبيه راسي يدور !!</h1>
+			<div>
+				<p>
+					بالتعاون مع قسم امراض و جراحة الانف و الحلق و الاذنين بالمستشفى
+					الجامعي الحبيب بورقيبة بصفاقس شاركت الجمعية يوما مفتوحا لأمراض الدوخة
+					والتوازن تحت شعار " يا دكتور شبيه راسي يدور" بفضاء العيادات الخارجية
+					للمستشفى.
+				</p>
+				<hr />
+				<figure>
+					<img
+						src="/project/res/activiries imgs/2023 imgs/image copy 6.png"
+						alt="image.png"
+						title="يا دكتور شبيه راسي يدور !!" />
+					<img
+						src="/project/res/activiries imgs/2023 imgs/image copy 7.png"
+						alt="image.png"
+						title="يا دكتور شبيه راسي يدور !!" />
+					<img
+						src="/project/res/activiries imgs/2023 imgs/image copy 8.png"
+						alt="image.png"
+						title="يا دكتور شبيه راسي يدور !!" />
+				</figure>
+				<hr />
+				<a
+					href="https://www.facebook.com/photo/?fbid=608625608148445&set=a.474367431574264"
+					target="_blank"
+					><i class="fa fa-facebook"></i
+				></a>
+			</div>
+		</article>
+		<!-- N03 Article: end -->
 		<!--* Content section: end -->
 
 		<!--* Footer part: start -->
