--- a/project/html/activities html/act-2024.html
+++ b/project/html/activities html/act-2024.html
@@ -1,3 +1,5 @@
+<!-- @format -->
+
 <!-------------------------------------------------
  * @file      act-2024.html
  * @author    @ZouariOmar (zouariomar20@gmail.com)
@@ -22,7 +24,7 @@
 		<!--* linkers -->
 		<link rel="stylesheet" type="text/css" href="/project/css/default.css" />
 		<link rel="stylesheet" type="text/css" href="/project/css/navbar.css" />
-		<link rel="stylesheet" href="/project/css/artical.css" />
+		<link rel="stylesheet" type="text/css" href="/project/css/artical.css" />
 		<link rel="stylesheet" type="text/css" href="/project/css/footer.css" />
 
 		<!--* Scripts -->
@@ -93,6 +95,115 @@
 			</ul>
 		</nav>
 		<!--* Navbar: end -->
+
+		<!--* Cards: start -->
+		<div class="container">
+			<!-- Topic N00: start -->
+			<a href="#N00" class="card" target="_parent">
+				<div class="card__header">
+					<img
+						src="https://uhaaccelerate.blob.core.windows.net/accelerate/attachments/cl1pfw0iy2m5j0nlm2vmudlya-ramadanheader.0.150.1200.600.full.jpg"
+						alt="رمضان.png"
+						class="card__image"
+						width="600" />
+				</div>
+				<div class="card__body">
+					<span class="tag tag-blue">رمضان</span>
+					<h3>صحتك بخير في شهر الخير</h3>
+					<p>
+						حضور قارب ال120 شخصا، في أول مبادرة تثقيف صحي حول الصحة في رمضان،
+						أمسية "صحتك بخير في شهر الخير" نظمتها جمعية أطباء من أجل تونس
+						بالشراكة مع ...
+					</p>
+				</div>
+				<div class="card__footer">
+					<div class="user__info">
+						<small>9 مارس 2024</small>
+					</div>
+				</div>
+			</a>
+			<!-- Topic N00: end -->
+		</div>
+		<!--* Cards: end -->
+
+		<!-- Separator image: start -->
+		<img src="/project/res/custom/image.png" alt="custom.png" />
+		<!-- Separator image: end -->
+
+		<hr />
+
+		<!--* Content section: start -->
+		<!-- N00 Article: start -->
+		<article class="sub_article09" id="N00">
+			<h1>صحتك بخير في شهر الخير</h1>
+			<section>
+				<header>
+					<p>
+						حضور قارب <mark>ال120 شخصا</mark> ، في أول مبادرة تثقيف صحي حول
+						الصحة في رمضان، أمسية <b>"صحتك بخير في شهر الخير"</b> نظمتها جمعية
+						أطباء من أجل تونس بالشراكة مع المركب الثقافي محمد الجموسي شكرا
+						لضيوفنا خبراء الصحة الذين كان خطابهم مبسطا واضحا وعمليا..
+						<br />السيدة نائلة شاكر، الدكتور علي العموري، الدكتورة فاطمة المنيف،
+						السيدة حورية عميش والدكتور أمين مسدي<br />
+						لمسنا طيلة الأمسية اهتماما شديدا من الحضور الذين رافقونا إلى نهاية
+						الأمسية والذين شهدو بدرجة الاستفادة مع الاستمتاع بطريقة تقديم
+						المعلومة و التفاعل العفوي والقريب من واقعنا ! <br />إلى جانب
+						النصائح، قدمنا اقتراحات عملية لدبارات رمضانية صحية ونافعة والي كانت
+						تعاونا بين أخصائيتنا في التغذية السيدة نائلة شاكر والشاف المبتكرة
+						السيدة إيناس التريكي <br />شكرا لكل المساهمين والداعمين ❤️
+					</p>
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/417470005_699463539064651_8229841701537121483_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=75d36f&_nc_ohc=Zbqn1ZpGssEQ7kNvgH5G0FL&_nc_ht=scontent.ftun8-1.fna&oh=00_AYABKO0cByx5IFv33PRoTk-80zwKxK46IURzhz6Hc12tuA&oe=66C275F9"
+						alt="" />
+				</header>
+
+				<hr />
+
+				<figure>
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432489165_703272908683714_6205666896027611181_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=833d8c&_nc_ohc=m1wkkHttAl0Q7kNvgGyubYI&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAKNXlnCYYXA0zRcuaQgWnxeoTWXQPjWtNZLXdL7IRVCw&oe=66C28874"
+						alt="image.png"
+						title="صحتك بخير في شهر الخير" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432634309_703273528683652_1749460911313071384_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=833d8c&_nc_ohc=dx337WzYE60Q7kNvgF4Y2JX&_nc_ht=scontent.ftun8-1.fna&oh=00_AYCyWS4pbegly3Iw06SXNfvT_sg8_ppT8Jxn7eOrhYmBLg&oe=66C28872"
+						alt="image.png"
+						title="صحتك بخير في شهر الخير" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/431269352_703274298683575_5706469601760754988_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_ohc=yPR7jUYdJTUQ7kNvgEi7kJQ&_nc_ht=scontent.ftun8-1.fna&oh=00_AYArOs6_j4k5uO4oJbb-74cR_ttgK-3bhcGzaBZEloJPcQ&oe=66C28708"
+						alt="image.png"
+						title="صحتك بخير في شهر الخير" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/431266867_703274392016899_5371117755035505779_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=6dPUVUZRFCgQ7kNvgEOlVHq&_nc_ht=scontent.ftun8-1.fna&oh=00_AYBQcboqiuoy6KMPhF6LTn885CqyuLmmvmaJA0JSfaoUQw&oe=66C28217"
+						alt="image.png"
+						title="صحتك بخير في شهر الخير" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432492085_703274452016893_4615144059207316311_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=lTJ-Rvh2nLUQ7kNvgFJpOiP&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAc_KZbJfoHl_yTm0pvvt8WmuAGMf0J5hicKIRZtTyDmA&oe=66C2A5FA"
+						alt="image.png"
+						title="صحتك بخير في شهر الخير" /><img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432484346_703274985350173_6673479155222896213_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=833d8c&_nc_ohc=VxNNsESrK7sQ7kNvgF3_qGC&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAEx8IPAwB0Z3-ir4vhYKW_ucRXEtBlPpbmQHgzijpmtg&oe=66C2A3F6"
+						alt="image.png"
+						title="صحتك بخير في شهر الخير" /><img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432519269_703273995350272_845873879217220146_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_ohc=1MuacJBGZhUQ7kNvgHuuFlV&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAs3CcpXaJqCOvrQhK5skYVmBPajhMoamIPzHq1Il5jyA&oe=66C27E2A"
+						alt="image.png"
+						title="صحتك بخير في شهر الخير" /><img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432556999_703273945350277_7540069763196517399_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=833d8c&_nc_ohc=7lfjEw-qPAEQ7kNvgET0dj6&_nc_ht=scontent.ftun8-1.fna&oh=00_AYDroThskYkq-CCl43r6zTZs6nlIOFaEFFAQ1jUzAECxbg&oe=66C2936F"
+						alt="image.png"
+						title="صحتك بخير في شهر الخير" />
+				</figure>
+			</section>
+
+			<hr />
+
+			<footer>
+				<a
+					href="https://www.facebook.com/AMUT2012/posts/pfbid0ePEGBwbdNqf6AsCj7AwTMvFrh26xMkabYuTSk3cio9TtPESvDYcE7hqmLujGuqejl"
+					target="_blank"
+					><i class="fa fa-facebook"></i
+				></a>
+			</footer>
+		</article>
+		<!-- N00 Article: end -->
+		<!--* Content section: end -->
 
 		<!--* Footer part: start -->
 		<footer class="footer">
