--- a/project/html/index.html
+++ b/project/html/index.html
@@ -36,7 +36,7 @@
 	</head>
 
 	<!-- ? INDEX BODY PART -->
-	<body>
+	<body style="margin-top: 60px">
 		<!--* Navbar: start -->
 		<nav>
 			<ul>
@@ -106,12 +106,20 @@
 
 		<!-- Header part: start -->
 		<header class="h__sec">
+			<a href="https://www.unimed.com.tn/en">
+				<img src="/project/res/ADS imgs/Unimed AD.gif" alt="AD" />
+			</a>
+
 			<video autoplay loop muted>
 				<source
 					src="../res/vid/Shiny Chrome Logo Reveal_free (online-video-cutter.com).mp4"
 					type="video/mp4" />
 				Your browser does not support the video tag.
 			</video>
+
+			<a href="https://www.sanofi.com/en">
+				<img src="/project/res/ADS imgs/ezgif.com-animated-gif-maker.gif" alt="AD" />
+			</a>
 		</header>
 		<!-- Header part: end -->
 
