Add Ads and update the README.md

--- a/project/html/activities html/act-2024.html
+++ b/project/html/activities html/act-2024.html
@@ -102,13 +102,38 @@
 			<a href="#N00" class="card" target="_parent">
 				<div class="card__header">
 					<img
+						src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTRsDWVj1xVPc8io6YZwQAXfLi7TrZcLkObw&s"
+						alt="رمضان.png"
+						class="card__image"
+						width="600" />
+				</div>
+				<div class="card__body">
+					<span class="tag tag-blue">دورة تكوينية</span>
+					<h3>Les Urgences Estivales</h3>
+					<p>
+						نجاح على كافة المستويات لليوم الطبي الأول لجيبينيا يوم 21 جويلية
+						2024 بمقر إقامة كاهينة اللوزة الذي نظمته AMUT ...
+					</p>
+				</div>
+				<div class="card__footer">
+					<div class="user__info">
+						<small>21 جويلية 2024</small>
+					</div>
+				</div>
+			</a>
+			<!-- Topic N00: end -->
+
+			<!-- Topic N01: start -->
+			<a href="#N01" class="card" target="_parent">
+				<div class="card__header">
+					<img
 						src="https://uhaaccelerate.blob.core.windows.net/accelerate/attachments/cl1pfw0iy2m5j0nlm2vmudlya-ramadanheader.0.150.1200.600.full.jpg"
 						alt="رمضان.png"
 						class="card__image"
 						width="600" />
 				</div>
 				<div class="card__body">
-					<span class="tag tag-blue">رمضان</span>
+					<span class="tag tag-blue">تظاهرة تثقيفية</span>
 					<h3>صحتك بخير في شهر الخير</h3>
 					<p>
 						حضور قارب ال120 شخصا، في أول مبادرة تثقيف صحي حول الصحة في رمضان،
@@ -122,7 +147,7 @@
 					</div>
 				</div>
 			</a>
-			<!-- Topic N00: end -->
+			<!-- Topic N01: end -->
 		</div>
 		<!--* Cards: end -->
 
@@ -133,8 +158,76 @@
 		<hr />
 
 		<!--* Content section: start -->
-		<!-- N00 Article: start -->
+		<!-- N01 Article: start -->
 		<article class="sub_article09" id="N00">
+			<h1>Les Urgences Estivales</h1>
+			<section>
+				<header>
+					<p>
+						نجاح على كافة المستويات لليوم الطبي الأول لجيبينيا يوم 21 جويلية
+						2024 بمقر إقامة كاهينة اللوزة الذي نظمته AMUT بالتعاون مع AMFS
+						لحالات الطوارئ الصيفية. <br />
+						<b>المواضيع:</b> <br />
+						&nbsp - ضربة الشمس <br />
+						&nbsp - الغرق <br />
+						&nbsp - سموم العقرب <br />
+						&nbsp - لدغات الحشرات <br />
+						&nbsp - الالتهابات الغذائية <br />
+						<b>بقيادة:</b> <br />
+						&nbsp • د. ريم كراي <br />
+						&nbsp • الدكتورة منى الجربي <br />
+						&nbsp • د. آمنة الغربي <br />
+						خالص شكرنا للأستاذ نور الدين الرقيق رئيس قسم الطوارئ SAMU 04 بصفاقس
+						وفريقه على الشراكة.
+					</p>
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/450227397_7709098372551651_8122793668420074327_n.jpg?stp=dst-jpg_p180x540&_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_ohc=AWTUPIxw2YgQ7kNvgGxsqjS&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAix9bypkpkpwCXaLSUOSOjKlspekflYIe5l16Il8y19w&oe=66C40971"
+						alt="" />
+				</header>
+
+				<hr />
+
+				<figure>
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452396256_7795379520590202_7853537855642882856_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_ohc=EWQ-1UThYj8Q7kNvgE_Uu8b&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAFag115j2nRSwEuWXXHr8Y1t_ehVeZLarEfv29tz4x_g&oe=66C3DBE6"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452387901_7795379833923504_1500319073421026269_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=833d8c&_nc_ohc=6SPH_X-zYfoQ7kNvgHWYUu9&_nc_ht=scontent.ftun8-1.fna&oh=00_AYABoJX-fBTmJURWzkTdYha5XHgPuMk7o1XVG6nu2vVrtQ&oe=66C3D6E1"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452428844_7795379247256896_2431075414975096403_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=833d8c&_nc_ohc=J3V8LVgvvwsQ7kNvgE9stv3&_nc_ht=scontent.ftun8-1.fna&oh=00_AYDazjVdrD27ayxqY2rbhohwgcj9xYdBImgqr3eR1m1Maw&oe=66C40946"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452130082_7795386403922847_283036690816967960_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=833d8c&_nc_ohc=PZ1-7nAqBnoQ7kNvgHJj-sO&_nc_ht=scontent.ftun8-1.fna&oh=00_AYC4SQhK_6G1x34n-VtQ4O8IudwWfYmB40GEUSl8xzjT2Q&oe=66C4072B"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452428618_7795384357256385_5522469603550522440_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=833d8c&_nc_ohc=zh1gF7y5cboQ7kNvgGPMy7j&_nc_ht=scontent.ftun8-1.fna&oh=00_AYDgISCBVfktrYDkXsuPJX5RhvDcyzssSrJCLHSzqQH0-A&oe=66C3F697"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452374701_7795380977256723_2824777492951771476_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_ohc=PQj3555IR-EQ7kNvgFCzB90&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAa6cHFNlWoyYosv1_DS_XTVT4uX4m8i0F5qQUhzkdOug&oe=66C4080E"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452586279_7797707130357441_5414121708301892259_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=833d8c&_nc_ohc=5_UPAJ07dWsQ7kNvgHz8glE&_nc_ht=scontent.ftun8-1.fna&oh=00_AYBzDQ22on91Dbcj25l7vyYy_zh29aLrlbU2WA-ki1RDyg&oe=66C421C8"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+					<img
+						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452195231_7797707543690733_6975354325651616664_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_ohc=Z5jVpYmFmYwQ7kNvgGzl4nY&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAf4g-N2ZvRV-TRwcH4vuy8WRd6h-BCC3etFHi5YZVdGw&oe=66C3FD6F"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+				</figure>
+			</section>
+			<br />
+		</article>
+		<!-- N00 Article: end -->
+
+		<!-- N01 Article: start -->
+		<article class="sub_article09" id="N01">
 			<h1>صحتك بخير في شهر الخير</h1>
 			<section>
 				<header>
@@ -202,7 +295,7 @@
 				></a>
 			</footer>
 		</article>
-		<!-- N00 Article: end -->
+		<!-- N01 Article: end -->
 		<!--* Content section: end -->
 
 		<!--* Footer part: start -->
