--- a/project/html/charity html/about_us.html
+++ b/project/html/charity html/about_us.html
@@ -1,3 +1,5 @@
+<!-- @format -->
+
 <!-------------------------------------------------
  * @file      about_us.html
  * @author    @ZouariOmar (zouariomar20@gmail.com)
@@ -94,6 +96,10 @@
 		</nav>
 		<!--* Navbar: end -->
 
+		<section class="about_us">
+			<h1>من نحن ؟</h1>
+			<img src="/project/res/AMUT imgs/image.png" alt="image.png" />
+		</section>
 
 		<!--* Footer part: start -->
 		<footer class="footer">
